--- a/env.example
+++ b/env.example
@@ -1,15 +1,47 @@
+# ============================================
 # Telegram Bot Configuration
+# ============================================
+
+# API_ID та API_HASH - отримайте на https://my.telegram.org
+# 1. Увійдіть з номером телефону
+# 2. Перейдіть в "API development tools"
+# 3. Створіть додаток (якщо потрібно)
+# 4. Скопіюйте api_id (число) та api_hash (рядок)
 API_ID=your_api_id_here
 API_HASH=your_api_hash_here
+
+# BOT_TOKEN - отримайте у @BotFather в Telegram
+# 1. Напишіть /newbot або /token
+# 2. Виберіть свого бота
+# 3. Скопіюйте токен
 BOT_TOKEN=your_bot_token_here
+
+# CHANNEL_ID - username каналу (з @) або ID каналу
+# Наприклад: @my_channel або -1001234567890
 CHANNEL_ID=@your_channel_here
 
+# ============================================
 # Admin Configuration
+# ============================================
+
+# ADMIN_IDS - Telegram ID адмінів (через кому, без пробілів)
+# Отримати свій ID: напишіть @userinfobot в Telegram
 ADMIN_IDS=123456789,987654321
+
+# ADMIN_USERNAMES - нікнейми адмінів (через кому, без @)
 ADMIN_USERNAMES=admin1,admin2
 
-# Google Gemini AI (optional)
+# ============================================
+# Optional APIs (опціональні)
+# ============================================
+
+# Google Gemini AI - для AI функцій (опціонально)
+# Отримати: https://makersuite.google.com/app/apikey
 GEMINI_API_KEY=your_gemini_api_key_here
 
-# Pixabay API (optional)
+# Pixabay API - для картинок персонажів (опціонально)
+# Отримати: https://pixabay.com/api/docs/
+# 1. Зареєструйтесь на pixabay.com
+# 2. Перейдіть в розділ API
+# 3. Отримайте безкоштовний ключ
 PIXABAY_API_KEY=your_pixabay_api_key_here
